# iot-remote-monitoring-c-raspberrypi-getstartedkit

./: README.md
advanced/: readme.md
advanced/1.0/: CMakeLists.txt  build.sh  firmwarereboot.sh
advanced/1.0/remote_monitoring/: CMakeLists.txt  remote_monitoring.c
advanced/1.0/remote_monitoring/platform_specific/: CMakeLists.txt
basic/remote_monitoring/: CMakeLists.txt  remote_monitoring.c
basic/remote_monitoring/platform_specific/inc/: bme280.h
basic/remote_monitoring/platform_specific/src/: bme280.c  locking.c
simulator/: CMakeLists.txt
simulator/remote_monitoring/: CMakeLists.txt  remote_monitoring.c
